--- a/package.json
+++ b/package.json
@@ -35,5 +35,6 @@
     "@babel/preset-env": "^7.16.4",
     "babel-loader": "^8.2.3",
     "babel-runtime": "^6.26.0"
-  }
+  },
+  "homepage": "https://PengBoUESTC.github.io/web-components"
 }
