--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "webpack serve",
-    "bundle": "webpack "
+    "build": "webpack "
   },
   "lint-staged": {
     "src/**/*.{js,json,scss,ts,vue}": [
